# health_up

./: README.md  alembic.ini  pyproject.toml  seed.py
app/: database.py  dependencies.py  main.py  models.py  uow.py
app/repositories/: appointment.py  base.py  doctor.py  manager.py  office.py  owner.py  patient.py  speciality.py  user.py
app/routers/: appointments.py  auth.py  doctors.py  managers.py  medias.py  messages.py  offices.py  owners.py  patients.py  specialities.py  users.py
app/services/: appointments.py  doctors.py  managers.py  media.py  offices.py  owners.py  patients.py  specialities.py  users.py
migrations/: env.py
migrations/versions/: 885a1a2d71f8_adding_new_tables.py  baeedf9a66ed_create_tables.py  cbfe9d3cc100_adding_contacts_view.py
