[project]
name = "health-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "openai>=1.64.0",
    "pydantic-ai>=0.0.24",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "twilio>=9.4.6",
]
